@@ -140,6 +140,7 @@ ERRORS
              %s for %s '%s' has multiple values.
 
      check_required():
+             Parameter '%s' doesn't exist.
              Parameter '%s' is required.
 
 EXAMPLE1
