@@ -3,7 +3,7 @@ use warnings;
 
 use English;
 use Error::Pure::Utils qw(clean);
-use Test::More 'tests' => 3;
+use Test::More 'tests' => 4;
 use Test::NoWarnings;
 use Mo::utils qw(check_array_object check_required);
 
@@ -16,6 +16,15 @@ eval {
 };
 is($EVAL_ERROR, "Parameter 'key' is required.\n",
 	"Parameter 'key' is required.");
+clean();
+
+# Test.
+$self = {};
+eval {
+	check_required($self, 'key');
+};
+is($EVAL_ERROR, "Parameter 'key' doesn't exist.\n",
+	"Parameter 'key' doesn't exist.");
 clean();
 
 # Test.
