@@ -1,4 +1,5 @@
 0.13
+ - Add another error for check_required() for situation if key doesn't exists.
 
 0.12 2022-09-23T11:41:43+02:00
  - Add check_code().
